--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/node": "^18.16.3",
     "@types/sequelize": "^4.28.15",
     "nodemon": "^2.0.22",
